Se agregan nombres de integrantes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="btn5">#E74C3C</string>
     <string name="placeHolder">Ingresa cualquier texto...</string>
     <string name="tituloApp">Selecciona un boton</string>
+    <string name="integrantes">David Alejandro Huertas  70614 - Miguel Angel Perez 50353 </string>
 </resources>
